Bug 303375 - Dots in directory names treated as file extension separator when renaming
Summary: Dots in directory names treated as file extension separator when renaming
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: Frank Reininghaus
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2012-07-11 16:12 UTC by Janek Bevendorff
Modified: 2012-07-20 10:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:
kde: Usability+


Attachments
bug fix diff for bug 303375 (5.90 KB, patch)
2012-07-14 23:36 UTC, Emmanuel Pescosta
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Janek Bevendorff 2012-07-11 16:12:51 UTC
When renaming a folder that has a dot in its name Dolphin treats it as a file extension separator and only highlights the part before it.

Reproducible: Always



Expected Results:  
Dots in folder names should not be treated any special when renaming them.
Comment 1 Frank Reininghaus 2012-07-12 09:30:09 UTC
Thanks for the report, I can confirm this issue.
Comment 2 Jekyll Wu 2012-07-12 12:31:00 UTC
related with commit 6207525f  for bug 301893
Comment 3 Emmanuel Pescosta 2012-07-14 23:36:17 UTC
Created attachment 72528 [details]
bug fix diff for bug 303375

This patch fixes the problem. Also rename selection of files without mime-type is fixed (actual upstream state: no selection ->state with patch: whole file name is selected)
Comment 4 David Faure 2012-07-20 10:08:32 UTC
Git commit 379d94eab637ebb1a9a0c78f4b5e8ab345af6460 by David Faure.
Committed on 20/07/2012 at 12:09.
Pushed by dfaure into branch 'KDE/4.9'.

Fix bug 303375 - Dots in directory names treated as file extension.

Patch by Emmanuel Pescosta <emmanuelpescosta099@gmail.com>
REVIEW: 105575
FIXED-IN: 4.9.0

M  +31   -0    dolphin/src/kitemviews/kfileitemlistwidget.cpp
M  +5    -0    dolphin/src/kitemviews/kfileitemlistwidget.h
M  +8    -16   dolphin/src/kitemviews/kstandarditemlistwidget.cpp
M  +13   -0    dolphin/src/kitemviews/kstandarditemlistwidget.h
M  +3    -1    dolphin/src/views/renamedialog.cpp

http://commits.kde.org/kde-baseapps/379d94eab637ebb1a9a0c78f4b5e8ab345af6460